# normalform

./: .gitignore  README.md  pyproject.toml
src/normalform/: __init__.py  client.py  models.py
tests/: test_capture.py
